Fix native elements showing in light color scheme when in dark mode

--- a/src/renderer/src/styles/base/_base.sass
+++ b/src/renderer/src/styles/base/_base.sass
@@ -26,6 +26,7 @@ html
   -webkit-text-size-adjust: 100% // [1]
   -webkit-tap-highlight-color: rgba($black, 0) // [2]
   user-select: none
+  color-scheme: light dark
 
   [contenteditable]
     user-select: text
